samples/_failures_safe/1761276266_baa965_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b182331.c:174:1: error: expected ‘{’ at end of input
  174 | void dfs(struct
      | ^~~~
